Seccion 10: Pipes de Angular
Capitulo 133: Prime Button y estilo global
En este capitulo se aÃ±adio el estilo global basico para toda la
aplicacion, como el color de fondo y la tipografia. Tambien empleamos el
componente basico de PrimeButton, esto importando el modulo del mismo en
el app.modules. Se cambio el color de texto a blanco.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>{{ 'hoLa mundo' | lowercase }}</h1>
+<div class="text-layout">
+    <h1>{{ 'hoLa mundo' | lowercase }}</h1>
+</div>
+
+
+<button pButton 
+        label="Presioneme UwU"></button>
