Seccion 10: Pipes de Angular
Capitulo 136: PrimeNg - MenuBar
En este capitulo se implemento el comonente de menu de PrimeNG, ademas
de analizar su funcionamiento. Se removio la importancion del primeNG
del app.module por que el app.componente realmente no hace uso dede
estos modulos, lo hace el shared.module con el app-menu.component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="text-layout">
+<!-- <div class="text-layout">
     <h1>{{ nombre | lowercase }}</h1>
     <h1>{{ valor  | number }}</h1>
     <h1>{{ obj    | json }}</h1>
@@ -19,4 +19,6 @@
         quisquam repellat libero asperiores earum nam nobis, culpa ratione 
         quam perferendis esse, cupiditate neque quas!
     </p>
-</p-card>
+</p-card> -->
+
+<app-menu></app-menu>
