--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,1 +1,25 @@
-<p>basicos works!</p>
+<!-- Clase personalizada, cambia el color de la letra -->
+<div class="text-layout">
+    <h1>Pipes Básicos</h1>
+    <p>
+        Pipes Incluidos en Angular - Usualmente
+        en el Common Module.
+    </p>
+</div>
+
+<!-- PrimeFlex -->
+<div class="p-grind">
+
+    <div class="p-col-4">
+        <p-card header="uppercase">
+            1
+        </p-card>
+    </div>
+    <div class="p-col-4">
+        2
+    </div>
+    <div class="p-col-4">
+        3
+    </div>
+    
+</div>
