--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -8,18 +8,27 @@
 </div>
 
 <!-- PrimeFlex -->
-<div class="p-grind">
+<div class="grid">
 
-    <div class="p-col-4">
-        <p-card header="uppercase">
-            1
+    <div class="col-4">
+        <p-card header="uppercase"
+                [subheader]="nombreLower | uppercase">
+            {{ nombreLower | uppercase}}
         </p-card>
     </div>
-    <div class="p-col-4">
-        2
+
+    <div class="col-4">
+        <p-card header="lowercase"
+                [subheader]="nombreLower | lowercase">
+            {{ nombreLower | lowercase }}
+        </p-card>
     </div>
-    <div class="p-col-4">
-        3
+
+    <div class="col-4">
+        <p-card header="titlecase"
+                [subheader]="nombreCompleto | titlecase">
+            {{ nombreCompleto | titlecase }}
+        </p-card>
     </div>
     
 </div>
