Seccion 10: Pipes de Angular
Capitulo 141: Date Pipe
En este capitulo, se aprendio a usar el pide para dar formato visual a
las fechas, este usando varios ejemplos, como la fecha completa dada por
JS, hasta una corta y una con un formato personalizado. Esta parte de la
pagina esta divida en dos cards, una viene como implementarlar, la otra
card contiene el resultado de esa implementacion.

--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -32,3 +32,36 @@
     </div>
     
 </div>
+
+<div class="text-layout">
+    <h1>Date | Fecha | Pipé</h1>
+    <p>
+        Pipes para mostrar las fechas.
+    </p>
+</div>
+
+<div class="grid">
+    <div class="col-6">
+        <p-card header="Implementacion">
+            <ul>
+                <li> fecha </li>
+                <li> fecha | date </li>
+                <li> fecha | date: 'short' </li>
+                <li> fecha | date: 'long' </li>
+                <li> fecha | date: 'GG / dd - MMMM - yy / EEEE / hh:mm:ss aa' </li>
+            </ul>
+        </p-card>
+    </div>
+    <div class="col-6">
+        <p-card header="Resultado">
+            <ul>
+                <li> {{ fecha }} </li>
+                <li> {{ fecha | date }} </li>
+                <li> {{ fecha | date: 'short' }} </li>
+                <li> {{ fecha | date: 'long' }} </li>
+                <li> {{ fecha | date: 'GG / dd - MMMM - yy / EEEE / hh:mm:ss aa' }} </li>
+                
+            </ul>
+        </p-card>
+    </div>
+</div>
