--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="text-layout">
-    <h1>Date | Fecha | Pipé</h1>
+    <h1>Date | Fecha | Pipe</h1>
     <p>
         Pipes para mostrar las fechas.
     </p>
