Seccion 10: Pipes de Angular
Capitulo 147: i18nSelect Pipe
En este capitulo se vio como usar el pipe i18nSelect, que selecciona un
valor de un mapa de valores, esta seleccion es en base a la igualdad de
un valor con alguna clave de mapa de datos.

--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -9,8 +9,14 @@
 <div class="grid">
 
     <div class="col md:col-6">
+        <!-- 
+            Este pipe, necesita un mapa de objetos (invitacionMapa), este seleccionara el valor que tenga
+            una clave igual a un valor (genero). El valor obtenido del mapa sera el que se representara en pantalla.
+         -->
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-            Content
+            Saludos {{ nombre }}, es un placer 
+            {{ genero | i18nSelect: invitacionMapa }}
+            a nuestro evento
         </p-fieldset>
     </div>
 
