--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -22,7 +22,7 @@
 
     <div class="col md:col-6">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-            Content
+            Actualmente {{ clientes.length | i18nPlural: clientesMapa }} cliente esperando.
         </p-fieldset>
     </div>
 </div>
