--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -43,4 +43,27 @@
             </button>
         </p-fieldset>
     </div>
+
+    <div class="col md:col-6">
+        <p-fieldset legend="SlicePipe" [toggleable]="true">
+            <b>Original</b>
+            <pre>{{ clientes }}</pre>
+
+            <b>slice: 0: 2</b>
+            <pre>{{ clientes | slice:0 :2}}</pre>
+
+            <b>slice: 1: 2</b>
+            <pre>{{ clientes | slice:1 :2}}</pre>
+
+            <b>slice: 1: 3</b>
+            <pre>{{ clientes | slice:1 :3}}</pre>
+
+            <b>slice: 3: 4</b>
+            <pre>{{ clientes | slice:3 :4}}</pre>
+
+            <b>slice: 0: 3</b>
+            <pre>{{ nombre | slice:0 :3}}</pre>
+
+        </p-fieldset>
+    </div>
 </div>
