--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -66,4 +66,14 @@
 
         </p-fieldset>
     </div>
+
+    <div class="col md:col-6">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+            <ul>
+                <li *ngFor="let item of persona | keyvalue">
+                    {{ item.key | titlecase }}: {{ item.value }}
+                </li>
+            </ul>
+        </p-fieldset>
+    </div>
 </div>
