--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -76,4 +76,10 @@
             </ul>
         </p-fieldset>
     </div>
+
+    <div class="col md:col-6">
+        <p-fieldset legend="JSON Pipe" [toggleable]="true">
+            <pre>{{ heroes | json }}</pre>
+        </p-fieldset>
+    </div>
 </div>
