Seccion 11: Pipes Personalizados
Capitulo 159: Valor y argumentos a los pipes personalizados
En este capitulo se completo un pipe sencillo, que es capas de recibir o
no parametros. Ademas de mandar el argumento al pipe con una propiedad
en TS mediante un pButton de PrimeNG.

--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,6 +1,14 @@
 <div class="text-layout">
     <h1>Pipes Personalizados</h1>
     <p>
-        Pipes Creados por {{ 'nosotros' | mayusculas }}
+        Pipes Creados por {{ 'nosotros' | mayusculas: upperLower }}
     </p>
+
+    <button pButton
+            pRipple
+            label="Toggle Mayusculas"
+            (click)="changeUpperLower()"
+            class="p-button-warning p-button-raised p-button-text">
+
+    </button>
 </div>
