--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,4 +1,4 @@
-<div class="text-layout">
+<div class="text-layout mb-5">
     <h1>Pipes Personalizados</h1>
     <p>
         Pipes Creados por {{ 'nosotros' | mayusculas: upperLower }}
@@ -8,7 +8,63 @@
             pRipple
             label="Toggle Mayusculas"
             (click)="changeUpperLower()"
-            class="p-button-warning p-button-raised p-button-text">
+            class="p-button-warning p-button-raised p-button-text"></button>
+</div>
 
-    </button>
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+       
+    </div>
+    
+    <div class="p-toolbar-group-right">
+
+        <button pButton
+            pRipple
+            label="Toggle Mayusculas"
+            (click)="changeUpperLower()"
+            class="p-button-warning mr-2"></button>
+
+
+        <button pButton
+                pRipple
+                label="Por Nombre"
+                icon="pi pi-sort"
+                class="mr-2"></button>
+
+        <button pButton
+                pRipple
+                label="Valores"
+                icon="pi pi-sort"
+                class="p-button-success mr-1"></button>
+
+        <button pButton
+                pRipple
+                label="Por Color"
+                icon="pi pi-sort"
+                class="p-button-help mr-1"></button>
+    </div>
+</p-toolbar>
+
+<div class="grid">
+    <div class="col mt-2">
+
+        <p-table [value]="[]">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Quantity</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product>
+                <tr>
+                    <td>{{product.code}}</td>
+                    <td>{{product.name}}</td>
+                    <td>{{product.category}}</td>
+                    <td>{{product.quantity}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
 </div>
