Seccion 11: Pipes Personalizados
Capitulo 163: Ordenar heroes por nombre - OrdenarPipe
Se creo un Pipe personalizado que ordenaras los nombres del listado de
heroes en orden alphabetico.

--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -33,7 +33,7 @@
 
         <button pButton
                 pRipple
-                label="Valores"
+                label="Vuela"
                 icon="pi pi-sort"
                 class="p-button-success mr-1"></button>
 
@@ -48,7 +48,7 @@
 <div class="grid">
     <div class="col mt-2">
 
-        <p-table [value]="heroes">
+        <p-table [value]="heroes | ordenar">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Nombre</th>
